--- a/scss/layouts/_section-info.scss
+++ b/scss/layouts/_section-info.scss
@@ -15,15 +15,17 @@
 
 @media screen and (max-width: $tablet-size) {
     .info__text {
-        padding: calc(100vw / 8) calc(100vw / 3.02);
+        padding: calc(100vw / 8) calc(100vw / 5.02);
         padding-right: 50px;
+        gap: 20px;
     }
 }
 
 @media screen and (max-width: $mobile-size) {
     .info__text {
-        padding: calc(100vw / 4) calc(100vw / 3.02);
-        padding-right: 20px;
+        padding: calc(100vw / 4) calc(100vw / 8.02);
+        padding-right: 20px;;
+        gap: 10px;
     }
 }
 
